--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="script.js" defer></script>
   </head>  
   <body>
-    <h1>AudioWorklet Demo</h1>
+    <h1>AudioWorkletProcessor-not-terminated-bug-demo</h1>
     
    <!-- <p>
       This page is a demo for the <code>AudioWorklet</code> API,
